--- a/src/components/about-me/index.css
+++ b/src/components/about-me/index.css
@@ -1,7 +1,7 @@
 /* About-me */
 .about {
     position: relative;
-    background-image: url('./assets/grid-pattern.webp');
+    background-image: url('../../assets/grid-pattern.webp');
     background-position: -10px -10px;
     background-size: 90px;
 }
@@ -11,4 +11,45 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    gap: 10px
+}
+
+.title-large.about-me {
+    color: var(--color-on-secondary);
+    text-shadow: 0px 4px 4px var(--color-secondary);
+}
+
+.title-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px 0px;
+    gap: 30px;
+}
+
+.line {
+    width: 179px;
+    border: 1px solid var(--color-on-secondary);
+    box-shadow: 0px 4px 4px var(--color-secondary);
+}
+
+.about-details {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 20px 0px 10px 50px;
+    gap: 15px;
+    color: var(--color-on-secondary);
+}
+
+@media screen and (max-width: 600px) {
+    .title-container {
+        flex-direction: column;
+        padding: 0px;
+        gap: 0;
+    }
+
+    .about-details {
+        padding: 20px 0px 10px 20px;
+    }
 }
