--- a/src/components/layout/index.css
+++ b/src/components/layout/index.css
@@ -1,6 +1,25 @@
 /* Layout */
 .container {
-    width: 80%;
-    height: auto;
-    margin: 0 auto;
+    margin: 0 1rem;
+}
+
+@media screen and (min-width: 320px) {
+    .container {
+        width: 90%;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .container {
+        width: 85%;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .container {
+        width: 1140px;
+        margin: 0 auto;
+    }
 }
