--- a/src/components/about-me/index.css
+++ b/src/components/about-me/index.css
@@ -11,12 +11,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 10px
+    gap: 10px;
 }
 
 .title-large.about-me {
-    color: var(--color-on-secondary);
-    text-shadow: 0px 4px 4px var(--color-secondary);
+    color: var(--color-on-primary-container);
+    text-shadow: 0px 4px 4px var(--color-primary-container);
 }
 
 .title-container {
@@ -25,12 +25,13 @@
     align-items: center;
     padding: 10px 0px;
     gap: 30px;
+    z-index: var(--ontop-cursor-zIndex);
 }
 
 .line {
     width: 179px;
-    border: 1px solid var(--color-on-secondary);
-    box-shadow: 0px 4px 4px var(--color-secondary);
+    border: 1px solid var(--color-on-primary-container);
+    box-shadow: 0px 4px 4px var(--color-primary-container);
 }
 
 .about-details {
@@ -39,7 +40,8 @@
     align-items: flex-start;
     padding: 20px 0px 10px 50px;
     gap: 15px;
-    color: var(--color-on-secondary);
+    color: var(--color-on-primary-container);
+    z-index: var(--ontop-cursor-zIndex)
 }
 
 @media screen and (max-width: 600px) {
