--- a/src/components/projects/index.css
+++ b/src/components/projects/index.css
@@ -1,41 +1,47 @@
 /* Projects */
-
 .projects {
-    background-color: var(--color-tertiary);
+    background-color: var(--color-primary);
     border-radius: 40px;
+    margin: 0 1rem
 }
 
-.title-large.project {
-    color: var(--color-on-tertiary);
-    text-shadow: 0px 4px 4px var(--color-on-tertiary-container);
-    filter: drop-shadow(0px 10px 4px var(--color-on-tertiary-container));
-}
-
-.scroll_wrap {
-    display: flex;
-}
-
-.left {
-    top: calc((100vh - (var(--header-height))) /2);
-    width: 30vw;
-    height: 200px;
-    position: sticky;
-    text-align: center;
-}
-
-.right {
-    top: 80px;
-    width: 70vw;
+.projects-container {
     display: flex;
     flex-direction: column;
 }
 
-.box>p {
-    height: 70vh;
+.projects-title-wrap {
+    text-align: center;
+    z-index: var(--ontop-cursor-zIndex);
+    margin-top: 1.5rem;
+}
+
+.title-large.project {
+    color: var(--color-primary-container);
+    text-shadow: 0px 4px 4px var(--color-on-primary-container);
+    filter: drop-shadow(0px 10px 4px var(--color-on-primary-container));
+}
+
+.project-scroll-wrap {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 4rem 2rem;
-    background-color: var(--color-background);
-    border-radius: 40px;
+    flex-direction: column;
+}
+
+@media screen and (min-width: 768px) {
+    .projects-container {
+        flex-direction: row;
+    }
+
+    .projects-title-wrap {
+        top: calc((100vh - (var(--header-height))) /2);
+        width: 40vw;
+        height: 200px;
+        position: sticky;
+        margin-top: 0;
+    }
+
+    .project-scroll-wrap {
+        top: 80px;
+        width: 60vw;
+    }
 }
