--- a/src/components/tail-moving-cursor/index.css
+++ b/src/components/tail-moving-cursor/index.css
@@ -6,6 +6,6 @@
     top: 0;
     left: 0;
     pointer-events: none;
-    z-index: 99999999;
+    z-index: var(--cursor-zIndex);
     /* so that it stays on top of all other elements */
 }
