chore: add courses section

--- a/src/components/contact/index.css
+++ b/src/components/contact/index.css
@@ -1,4 +1,6 @@
 /* Contact */
 .contact {
-    background-color: #002117;
+    position: relative;
+    background-position: -10px -10px;
+    background-size: 90px;
 }
