--- a/src/components/about-me/index.css
+++ b/src/components/about-me/index.css
@@ -19,13 +19,22 @@
     text-shadow: 0px 4px 4px var(--color-primary-container);
 }
 
-.title-container {
+.title-container.fade-in {
     display: flex;
     flex-direction: row;
     align-items: center;
     padding: 10px 0px;
     gap: 30px;
     z-index: var(--ontop-cursor-zIndex);
+}
+
+.about-content>.fade-in {
+    opacity: 0;
+    transition: opacity 1s;
+}
+
+.about-content>.fade-in.appear {
+    opacity: 1;
 }
 
 .line {
