--- a/src/components/about-me/index.css
+++ b/src/components/about-me/index.css
@@ -54,7 +54,7 @@
 }
 
 @media screen and (max-width: 600px) {
-    .title-container {
+    .title-container.fade-in {
         flex-direction: column;
         padding: 0px;
         gap: 0;
@@ -62,5 +62,6 @@
 
     .about-details {
         padding: 20px 0px 10px 20px;
+        gap: 10px;
     }
 }
