--- a/src/components/contact/index.css
+++ b/src/components/contact/index.css
@@ -1,6 +1,63 @@
 /* Contact */
 .contact {
-    position: relative;
     background-position: -10px -10px;
     background-size: 90px;
+    min-height: calc(100vh - var(--header-height))
+}
+
+.contact-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+    height: calc(100vh - var(--header-height));
+}
+
+.contact-title {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-top: 4rem;
+    gap: 30px;
+    z-index: var(--ontop-cursor-zIndex);
+}
+
+.contact-title>.title-large {
+    color: var(--color-primary-container);
+    text-shadow: 0px 4px 4px var(--color-container);
+}
+
+.contact-title>.line {
+    width: 179px;
+    border: 1px solid var(--color-primary-container);
+    text-shadow: 0px 4px 4px var(--color-container);
+}
+
+.contact-details {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 20px 0px 10px 50px;
+    gap: 15px;
+    color: var(--color-surface);
+    z-index: var(--ontop-cursor-zIndex)
+}
+
+footer {
+    color: var(--color-surface-variant);
+    font-family: var(--font-label-subtitle);
+    font-size: 16px;
+    height: 20vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+@media screen and (max-width: 600px) {
+    .contact-title {
+        flex-direction: column;
+        padding: 2rem 0px;
+        gap: 0;
+    }
 }
