--- a/src/components/projects/project-card/index.css
+++ b/src/components/projects/project-card/index.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     gap: 20px;
-    margin: 4rem 2rem;
+    margin: 2rem 2rem;
     border-radius: 40px;
 }
 
@@ -81,6 +81,11 @@
 
     .project-description>p {
         text-align: right;
+    }
+
+    .project-card>div.card-wrap {
+
+        margin: 4rem 2rem;
     }
 
 }
