--- a/src/index.css
+++ b/src/index.css
@@ -296,3 +296,9 @@ section {
         min-height: 100vh;
     }
 }
+
+@media screen and (max-width: 500px) {
+    body {
+        cursor: auto;
+    }
+}
