--- a/src/components/contact/index.css
+++ b/src/components/contact/index.css
@@ -56,6 +56,19 @@ footer {
     z-index: var(--ontop-cursor-zIndex)
 }
 
+.links-container {
+    width: 100%;
+    display: flex;
+    gap: 50px;
+    justify-content: center;
+    align-items: center;
+    padding-top: 100px
+}
+
+.links-container>a:hover {
+    transform: scale(2);
+}
+
 @media screen and (max-width: 600px) {
     .contact-title {
         flex-direction: column;
