--- a/src/components/projects/project-card/index.css
+++ b/src/components/projects/project-card/index.css
@@ -8,8 +8,10 @@
 }
 
 .card-wrap>img {
+    width: 100%;
     border-radius: 40px;
-    max-width: 100%;
+    object-fit: contain;
+    background-color: white;
 }
 
 .subtitle-large {
